Fixed image too wide on product modal

--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,10 @@ body {
   left: 10px;
 }
 
+.modal-product-image {
+    max-width: 100%;
+}
+
 footer {
   margin-top: 20px;
   padding: 15px;
